feat: Enable static site generation for command pages
- Add `prerender = true` to enable static site generation
- Improve page performance and build optimization for command routes

--- a/src/pages/command/[...slug].astro
+++ b/src/pages/command/[...slug].astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true
+
 import ClipboardCopy from '$/components/buttons/ClipboardCopy.astro'
 import Layout from '$/layouts/Layout.astro'
 import { translateCategory } from '$/lib/translates'
