--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const filteredCommands = commandFiles.filter(
 >
   <main class="container mx-auto h-full px-8 py-12">
     <h1
-      class="from-silver-100 to-silver-50 animate-gradientbg bg-gradient-to-r bg-clip-text text-center text-6xl font-bold text-transparent"
+      class="from-silver-300 to-silver-50 bg-gradient-to-r bg-clip-text text-center text-6xl font-bold text-transparent"
     >
       Guía de Comandos
       <span
@@ -35,7 +35,7 @@ const filteredCommands = commandFiles.filter(
       </span>
     </h1>
     <p
-      class="animate-gradientbg mb-12 bg-gradient-to-r from-violet-500 via-white to-violet-500 bg-[length:200%_auto] bg-clip-text text-center text-xl text-transparent"
+      class="animate-gradientbg mb-12 bg-gradient-to-r from-violet-400 from-40% via-white via-50% to-violet-400 to-60% bg-[length:200%_100%] bg-clip-text text-center text-xl text-transparent"
     >
       Una guía interactiva de los comandos más útiles de Git
     </p>
@@ -61,7 +61,6 @@ const filteredCommands = commandFiles.filter(
               description={description}
               category={category}
               difficulty={difficulty}
-              data-category={category}
             />
           )
         )
